--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -16,18 +16,22 @@
     "@types/node": "18.15.13",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "highlight.js": "^11.7.0",
+    "marked": "^4.3.0",
     "next": "13.3.1",
-    "postcss": "8.4.23",
+    "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1",
+    "swr": "^2.1.3",
+    "tailwindcss": "^3.3.1",
     "typescript": "5.0.4"
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
+    "@types/marked": "^4.0.8",
     "jest": "^29.5.0",
     "ts-node": "^10.9.1"
   }
